namespaces/live.cloud-platform.service.justice.gov.uk/laa-manage-your-civil-cases-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-manage-your-civil-cases-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    cloud-platform.justice.gov.uk/namespace: "laa-manage-your-civil-cases-uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-mcc-team"
    cloud-platform.justice.gov.uk/application: "Manage Your Civil Cases"
    cloud-platform.justice.gov.uk/owner: "MCC: MCC.LAADigital@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-manage-your-civil-cases"
    cloud-platform.justice.gov.uk/team-name: "manage-your-civil-cases"
    cloud-platform.justice.gov.uk/review-after: ""
